Nov 11, 2025
  CL ontology: updated to release v2025-11-04

Nov 07, 2025
  improved parser for EFO ontology
  XRefManager: auto removal of duplicates

Nov 03, 2025
  added xref loader for CMO-VT cross-ontology synonyms

Oct 21, 2025
  CL ontology: updated to release v2025-10-16

Oct 16, 2025
  chebi: updated synonym and relationship handling due to new major release of CHEBI ontology

Oct 06, 2025
  FileSystemLock: changed logging levels to reduce amount of messages in the logs

Oct 03, 2025
  DO ontology loader: fixed loading of def xrefs
  stats logger: changed logging level from 'debug' to 'info' to avoid creation of 100GB+ logs

Sep 03, 2025
  EFO ontology: fixed ontology parser

Aug 19, 2025
  CL ontology: updated to release v2025-07-30

Jul 14, 2025
  stats: removed logging of dbg info (stats.log file was growing too much)

Jun 24, 2025
  CL ontology: updated to release v2025-06-20

May 20, 2025
  EFO loader: fixed file parser to properly translate EFO:efo:EFO_xxxxxxx accessions

Apr 22, 2025
  EFO xref loader: improved qc to skip loading of duplicates

Apr 15, 2025
  CL ontology: updated to release v2025-04-10

Apr 09, 2025
  DO ontology loader: fixed parsing of some PMIDs

Feb 24, 2025
  OBA ontology: added loading of VT xrefs
  DO ontology loader: human friendly loading of definition xrefs

Feb 21, 2025
  added loading of OBA ontology

Feb 19, 2025
  added handling of several new synonym types for MP/HP ontologies

Feb 17, 2025
  CL ontology: updated to release v2025-02-13

Jan 31, 2025
  CL ontology: updated to release v2025-01-08

Dec 20, 2024
  DO synonym loader: updated to resolve obsolete terms

Nov 15, 2024
  GO taxon constrains: added handling of obsolete terms

Nov 12, 2024
  EfoXrefGenerator: fixed -- created synonyms should always have type set to 'xref'

Oct 28, 2024
  CL ontology: updated to release v2024-09-26

Aug 09, 2024
  loader: added security check to prevent processing (loading) of ontologies developed and maintained in RGD